--- a/css/style.css
+++ b/css/style.css
@@ -2463,6 +2463,11 @@ h1 {
 
 .img-responsive {
   width: 100%;
+  border: 1px #CFCFCF solid;
+  padding: 4px;
+  width: 90%;
+  margin: 0 auto;
+  display: block;
 }
 
 .truncate {
@@ -2862,6 +2867,53 @@ header .headLogo .logo {
   float: right;
 }
 
+/* about us page*/
+.aboutUs h3 {
+  text-align: center;
+  font-weight: 100;
+  margin: 30px 10%;
+  letter-spacing: 2px;
+  line-height: 22px;
+  border-top: 1px #CFCFCF solid;
+  padding: 10px;
+  text-transform: capitalize;
+}
+.aboutUs p {
+  padding: 10px;
+  text-align: justify;
+  font-size: 15px;
+  text-indent: 10px;
+  margin: 0 6%;
+}
+.aboutUs h4 {
+  text-align: right;
+  padding-right: 10%;
+  margin: 0 0 20px 0;
+}
+
+/* picture Gallery */
+.picGallery {
+  margin: 20px 0;
+  overflow: hidden;
+}
+.picGallery div {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 33.3333333333%;
+  float: left;
+  padding-left: 0.4166666667%;
+  padding-right: 0.4166666667%;
+}
+.picGallery img {
+  border: 1px #CFCFCF solid;
+  padding: 4px;
+  width: 90%;
+  margin: 0 auto;
+  display: block;
+}
+
+/* all pages footer */
 footer {
   text-align: center;
   background-color: #D6D6D6;
@@ -3081,6 +3133,10 @@ footer {
     position: absolute;
     right: 0;
     bottom: 0;
+  }
+
+  .aboutUs h3 {
+    margin: 30px 30%;
   }
 }
 @media (min-width: 960px) {
