--- a/sass/style.scss
+++ b/sass/style.scss
@@ -320,7 +320,8 @@ header {
 		margin: 30px auto;
 		display: block;
 	}
-	.picsGallery-thumbs{
+	.picsGallery-thumbs, .picsGallery-show{
+		@include span(border-box);
 	}
 }
 .singleCase {
