--- a/css/style.css
+++ b/css/style.css
@@ -3358,28 +3358,35 @@ footer {
   font-size: 12px;
   padding: 10px; }
 
+/* 404 */
+/* line 566, ../sass/style.scss */
+.error404 img {
+  display: block;
+  margin: 0 auto;
+  padding: 80px 0px; }
+
 @media (min-width: 768px) {
-  /* line 575, ../sass/style.scss */
+  /* line 584, ../sass/style.scss */
   h1 {
     font-size: 2em; }
 
-  /* line 575, ../sass/style.scss */
+  /* line 584, ../sass/style.scss */
   h2 {
     font-size: 1.5em; }
 
-  /* line 575, ../sass/style.scss */
+  /* line 584, ../sass/style.scss */
   h3 {
     font-size: 1.2em; }
 
-  /* line 579, ../sass/style.scss */
+  /* line 588, ../sass/style.scss */
   h1 {
     line-height: 1.2em; }
 
-  /* line 582, ../sass/style.scss */
+  /* line 591, ../sass/style.scss */
   a:hover {
     color: #dd0044; }
 
-  /* line 585, ../sass/style.scss */
+  /* line 594, ../sass/style.scss */
   .container {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -3394,17 +3401,17 @@ footer {
       display: block;
       clear: both; }
 
-  /* line 590, ../sass/style.scss */
+  /* line 599, ../sass/style.scss */
   header .headLogo {
     width: 280px;
     padding: 16px 0 16px 12px;
     position: relative; }
 
-  /* line 596, ../sass/style.scss */
+  /* line 605, ../sass/style.scss */
   .slider {
     display: block; }
 
-  /* line 600, ../sass/style.scss */
+  /* line 609, ../sass/style.scss */
   .news .newsBlock {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -3413,11 +3420,11 @@ footer {
     float: left;
     padding-left: 0.41667%;
     padding-right: 0.41667%; }
-    /* line 603, ../sass/style.scss */
+    /* line 612, ../sass/style.scss */
     .news .newsBlock:hover h3:after {
       width: 90%;
       background-color: #D30000; }
-  /* line 609, ../sass/style.scss */
+  /* line 618, ../sass/style.scss */
   .news .newsDetailed {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -3427,7 +3434,7 @@ footer {
     padding-left: 0.41667%;
     padding-right: 0.41667%; }
 
-  /* line 613, ../sass/style.scss */
+  /* line 622, ../sass/style.scss */
   .itemBlock {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -3436,26 +3443,26 @@ footer {
     float: left;
     padding-left: 0.41667%;
     padding-right: 0.41667%; }
-    /* line 615, ../sass/style.scss */
+    /* line 624, ../sass/style.scss */
     .itemBlock .itemBlockLink {
       transition: all 2s;
       -webkit-transition: all 2s;
       /* Safari */ }
-      /* line 619, ../sass/style.scss */
+      /* line 628, ../sass/style.scss */
       .itemBlock .itemBlockLink .picWrap .picIndex {
         width: 200px;
         margin-left: -60px; }
-      /* line 624, ../sass/style.scss */
+      /* line 633, ../sass/style.scss */
       .itemBlock .itemBlockLink:hover + h3 {
         color: #D30000; }
-      /* line 627, ../sass/style.scss */
+      /* line 636, ../sass/style.scss */
       .itemBlock .itemBlockLink:hover {
         border-color: #D30000; }
-      /* line 630, ../sass/style.scss */
+      /* line 639, ../sass/style.scss */
       .itemBlock .itemBlockLink:hover .itemName {
         visibility: visible; }
 
-  /* line 636, ../sass/style.scss */
+  /* line 645, ../sass/style.scss */
   .catalog-brand .brandModel {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -3465,7 +3472,7 @@ footer {
     padding-left: 0.41667%;
     padding-right: 0.41667%; }
 
-  /* line 640, ../sass/style.scss */
+  /* line 649, ../sass/style.scss */
   .picsGallery {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -3474,7 +3481,7 @@ footer {
     float: left;
     padding-left: 0.41667%;
     padding-right: 0.41667%; }
-    /* line 642, ../sass/style.scss */
+    /* line 651, ../sass/style.scss */
     .picsGallery span {
       -moz-box-sizing: border-box;
       -webkit-box-sizing: border-box;
@@ -3483,20 +3490,20 @@ footer {
       float: left;
       padding-left: 0.41667%;
       padding-right: 0.41667%; }
-    /* line 646, ../sass/style.scss */
+    /* line 655, ../sass/style.scss */
     .picsGallery .picsGallery-thumbs img {
       border: 1px solid #DDD; }
-    /* line 650, ../sass/style.scss */
+    /* line 659, ../sass/style.scss */
     .picsGallery .picsGallery-show {
       display: block; }
-    /* line 653, ../sass/style.scss */
+    /* line 662, ../sass/style.scss */
     .picsGallery .singleCasePic {
       margin: 20px auto;
       display: block !important;
       width: 100%;
       max-width: 100%; }
 
-  /* line 660, ../sass/style.scss */
+  /* line 669, ../sass/style.scss */
   .singleCase {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -3507,7 +3514,7 @@ footer {
     padding-right: 0.41667%;
     padding-left: 6%; }
 
-  /* line 665, ../sass/style.scss */
+  /* line 674, ../sass/style.scss */
   .contacts .contactsBlock {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -3517,7 +3524,7 @@ footer {
     padding-left: 0.41667%;
     padding-right: 0.41667%; }
 
-  /* line 669, ../sass/style.scss */
+  /* line 678, ../sass/style.scss */
   .inCart-item {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -3527,7 +3534,7 @@ footer {
     padding-left: 0.41667%;
     padding-right: 0.41667%; }
 
-  /* line 672, ../sass/style.scss */
+  /* line 681, ../sass/style.scss */
   .inCart-itemPicture {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -3536,11 +3543,11 @@ footer {
     float: left;
     padding-left: 0.41667%;
     padding-right: 0.41667%; }
-    /* line 674, ../sass/style.scss */
+    /* line 683, ../sass/style.scss */
     .inCart-itemPicture img.picIndex {
       width: 100%; }
 
-  /* line 678, ../sass/style.scss */
+  /* line 687, ../sass/style.scss */
   .inCart-details {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -3549,49 +3556,49 @@ footer {
     float: left;
     padding-left: 0.41667%;
     padding-right: 0.41667%; }
-    /* line 681, ../sass/style.scss */
+    /* line 690, ../sass/style.scss */
     .inCart-details ul li {
       width: 20%; }
 
-  /* line 686, ../sass/style.scss */
+  /* line 695, ../sass/style.scss */
   .orderForm-delivery {
     margin: 30px 60px; }
-    /* line 688, ../sass/style.scss */
+    /* line 697, ../sass/style.scss */
     .orderForm-delivery > div:hover {
       background: #EBEBEB; }
 
-  /* line 692, ../sass/style.scss */
+  /* line 701, ../sass/style.scss */
   .orderForm-info {
     width: 80%;
     margin: 0 auto; }
-    /* line 695, ../sass/style.scss */
+    /* line 704, ../sass/style.scss */
     .orderForm-info textarea {
       width: 100%;
       height: 160px; }
 
-  /* line 700, ../sass/style.scss */
+  /* line 709, ../sass/style.scss */
   .btn-Remove {
     position: absolute;
     right: 0;
     bottom: 0; }
 
-  /* line 706, ../sass/style.scss */
+  /* line 715, ../sass/style.scss */
   .aboutUs h3 {
     margin: 30px 30%; } }
 @media (min-width: 960px) {
-  /* line 716, ../sass/style.scss */
+  /* line 725, ../sass/style.scss */
   h1 {
     font-size: 2.2em; }
 
-  /* line 716, ../sass/style.scss */
+  /* line 725, ../sass/style.scss */
   h2 {
     font-size: 1.5em; }
 
-  /* line 716, ../sass/style.scss */
+  /* line 725, ../sass/style.scss */
   h3 {
     font-size: 1.2em; }
 
-  /* line 719, ../sass/style.scss */
+  /* line 728, ../sass/style.scss */
   .container {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -3605,7 +3612,7 @@ footer {
       display: block;
       clear: both; }
 
-  /* line 722, ../sass/style.scss */
+  /* line 731, ../sass/style.scss */
   .itemBlock {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -3614,12 +3621,12 @@ footer {
     float: left;
     padding-left: 0.41667%;
     padding-right: 0.41667%; }
-    /* line 726, ../sass/style.scss */
+    /* line 735, ../sass/style.scss */
     .itemBlock .itemBlockLink .picWrap .picIndex {
       width: 220px;
       margin-left: -50px; } }
 @media (min-width: 1200px) {
-  /* line 737, ../sass/style.scss */
+  /* line 746, ../sass/style.scss */
   .container {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -3633,7 +3640,7 @@ footer {
       display: block;
       clear: both; }
 
-  /* line 745, ../sass/style.scss */
+  /* line 754, ../sass/style.scss */
   .picWrap .picIndex {
     width: 250px;
     margin-left: -50px; } }
