--- a/sass/style.scss
+++ b/sass/style.scss
@@ -105,6 +105,11 @@ textarea {
   float: right;
 }
 
+.share42init {
+  text-align: center;
+  margin-top: 10px;
+}
+
 /*=============================================
 =          GENERAL FOR ALL RESOULUTIONS       =
 =============================================*/
